--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "obfuscate"
   ],
   "author": "Herrtt",
-  "license": "MPL-2.0",
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/Herrtt/Boronide-Obfuscator/issues"
   },
